terraform/sg.tf
resource "aws_security_group" "permitessh" {
  name        = "permitessh"
  description = "Permite SSH trafego de entrada"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Permite SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Permite_SSH"
  }
}

resource "aws_security_group" "sg_lb" {
  name               = var.name
  description        = "Permitir todo o trafego de entrada"
  vpc_id             = aws_vpc.main.id

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }
}
